--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 # PORT=5000
 MONGO_URI=mongodb://localhost:27017
-# EMAIL=pavulurikondalu309@gmail.com
-# EMAIL_PASS=seay fnld bema aylf
+EMAIL_USER=pavulurikondalu309@gmail.com
+EMAIL_PASS=seay fnld bema aylf
