Updated cardadmin.tsx file

--- a/xmretail-app/.env
+++ b/xmretail-app/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=http://localhost:5000
+# VITE_API_URL=http://localhost:5000
+VITE_API_URL=https://xmretail-4v056hs7h-praveens-projects-65ec0693.vercel.app/
