--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,8 +8,9 @@
     ],
     "routes": [
       {
-        "src": "(.*)",
-        "dest": "app.js"
+        "src": "/(.*)",
+        "dest": "/",
+        "methods":["GET","POST","PUT","DELETE","OPTIONS"]
       }
     ]
   }
